# next-svm

./: .gitignore  CMakeLists.txt  README.md
input/: small_test_sparse.txt
source/: Makefile  hpc_svm_predict.cpp  lin_alg.h  magma_exa_cu.h  magma_exa_omp.h  main.cpp  main.h  next_svm.cpp  next_svm.h  next_svm_data.cpp  next_svm_data.h  next_svm_io.cpp  next_svm_io.h  next_svm_predict.cpp  next_svm_predict.h  pisvm.cpp  pisvm.h  svm_light_to_bin.cpp  test_util.cpp  test_util.h
